style: mini fix on the lateral navigation spacing

--- a/src/index.css
+++ b/src/index.css
@@ -584,7 +584,7 @@ code {
 }
 
 #sync-label {
-  margin-top: 68px;
+  margin-top: 67px;
 }
 
 #settings #tablist label.active {
